cmake_minimum_required(VERSION 3.7)
project(quagga)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        bgpd/bgp_advertise.c
        bgpd/bgp_advertise.h
        bgpd/bgp_aspath.c
        bgpd/bgp_aspath.h
        bgpd/bgp_attr.c
        bgpd/bgp_attr.h
        bgpd/bgp_btoa.c
        bgpd/bgp_clist.c
        bgpd/bgp_clist.h
        bgpd/bgp_community.c
        bgpd/bgp_community.h
        bgpd/bgp_damp.c
        bgpd/bgp_damp.h
        bgpd/bgp_debug.c
        bgpd/bgp_debug.h
        bgpd/bgp_dump.c
        bgpd/bgp_dump.h
        bgpd/bgp_ecommunity.c
        bgpd/bgp_ecommunity.h
        bgpd/bgp_encap.c
        bgpd/bgp_encap.h
        bgpd/bgp_encap_tlv.c
        bgpd/bgp_encap_tlv.h
        bgpd/bgp_encap_types.h
        bgpd/bgp_filter.c
        bgpd/bgp_filter.h
        bgpd/bgp_fsm.c
        bgpd/bgp_fsm.h
        bgpd/bgp_lcommunity.c
        bgpd/bgp_lcommunity.h
        bgpd/bgp_main.c
        bgpd/bgp_mpath.c
        bgpd/bgp_mpath.h
        bgpd/bgp_mplsvpn.c
        bgpd/bgp_mplsvpn.h
        bgpd/bgp_network.c
        bgpd/bgp_network.h
        bgpd/bgp_nexthop.c
        bgpd/bgp_nexthop.h
        bgpd/bgp_nht.c
        bgpd/bgp_nht.h
        bgpd/bgp_open.c
        bgpd/bgp_open.h
        bgpd/bgp_packet.c
        bgpd/bgp_packet.h
        bgpd/bgp_regex.c
        bgpd/bgp_regex.h
        bgpd/bgp_route.c
        bgpd/bgp_route.h
        bgpd/bgp_routemap.c
        bgpd/bgp_snmp.c
        bgpd/bgp_snmp.h
        bgpd/bgp_table.c
        bgpd/bgp_table.h
        bgpd/bgp_vty.c
        bgpd/bgp_vty.h
        bgpd/bgp_zebra.c
        bgpd/bgp_zebra.h
        bgpd/bgpd.c
        bgpd/bgpd.h
        fpm/fpm.h
        fpm/fpm_pb.c
        fpm/fpm_pb.h
        isisd/include-netbsd/clnp.h
        isisd/include-netbsd/esis.h
        isisd/include-netbsd/iso.h
        isisd/topology/random.c
        isisd/topology/spacyc.c
        isisd/topology/spgrid.c
        isisd/topology/spgrid.h
        isisd/topology/sprand.c
        isisd/dict.c
        isisd/dict.h
        isisd/isis_adjacency.c
        isisd/isis_adjacency.h
        isisd/isis_bpf.c
        isisd/isis_circuit.c
        isisd/isis_circuit.h
        isisd/isis_common.h
        isisd/isis_constants.h
        isisd/isis_csm.c
        isisd/isis_csm.h
        isisd/isis_dlpi.c
        isisd/isis_dr.c
        isisd/isis_dr.h
        isisd/isis_dynhn.c
        isisd/isis_dynhn.h
        isisd/isis_events.c
        isisd/isis_events.h
        isisd/isis_flags.c
        isisd/isis_flags.h
        isisd/isis_lsp.c
        isisd/isis_lsp.h
        isisd/isis_main.c
        isisd/isis_misc.c
        isisd/isis_misc.h
        isisd/isis_network.h
        isisd/isis_pdu.c
        isisd/isis_pdu.h
        isisd/isis_pfpacket.c
        isisd/isis_redist.c
        isisd/isis_redist.h
        isisd/isis_route.c
        isisd/isis_route.h
        isisd/isis_routemap.c
        isisd/isis_routemap.h
        isisd/isis_spf.c
        isisd/isis_spf.h
        isisd/isis_te.c
        isisd/isis_te.h
        isisd/isis_tlv.c
        isisd/isis_tlv.h
        isisd/isis_vty.c
        isisd/isis_zebra.c
        isisd/isis_zebra.h
        isisd/isisd.c
        isisd/isisd.h
        isisd/iso_checksum.c
        isisd/iso_checksum.h
        lib/agentx.c
        lib/buffer.c
        lib/buffer.h
        lib/checksum.c
        lib/checksum.h
        lib/command.c
        lib/command.h
        lib/daemon.c
        lib/distribute.c
        lib/distribute.h
        lib/event_counter.c
        lib/event_counter.h
        lib/fifo.h
        lib/filter.c
        lib/filter.h
        lib/getopt.c
        lib/getopt.h
        lib/getopt1.c
        lib/hash.c
        lib/hash.h
        lib/if.c
        lib/if.h
        lib/if_rmap.c
        lib/if_rmap.h
        lib/jhash.c
        lib/jhash.h
        lib/keychain.c
        lib/keychain.h
        lib/libospf.h
        lib/linklist.c
        lib/linklist.h
        lib/log.c
        lib/log.h
        lib/md5.c
        lib/md5.h
        lib/memory.c
        lib/memory.h
        lib/memtypes.c
        lib/network.c
        lib/network.h
        lib/nexthop.c
        lib/nexthop.h
        lib/pid_output.c
        lib/plist.c
        lib/plist.h
        lib/plist_int.h
        lib/pqueue.c
        lib/pqueue.h
        lib/prefix.c
        lib/prefix.h
        lib/privs.c
        lib/privs.h
        lib/queue.h
        lib/regex-gnu.h
        lib/regex.c
        lib/routemap.c
        lib/routemap.h
        lib/sigevent.c
        lib/sigevent.h
        lib/smux.c
        lib/smux.h
        lib/snmp.c
        lib/sockopt.c
        lib/sockopt.h
        lib/sockunion.c
        lib/sockunion.h
        lib/str.c
        lib/str.h
        lib/stream.c
        lib/stream.h
        lib/table.c
        lib/table.h
        lib/thread.c
        lib/thread.h
        lib/vector.c
        lib/vector.h
        lib/vrf.c
        lib/vrf.h
        lib/vty.c
        lib/vty.h
        lib/workqueue.c
        lib/workqueue.h
        lib/zassert.h
        lib/zclient.c
        lib/zclient.h
        lib/zebra.h
        nhrpd/debug.h
        nhrpd/linux.c
        nhrpd/list.h
        nhrpd/netlink.h
        nhrpd/netlink_arp.c
        nhrpd/netlink_gre.c
        nhrpd/nhrp_cache.c
        nhrpd/nhrp_event.c
        nhrpd/nhrp_interface.c
        nhrpd/nhrp_main.c
        nhrpd/nhrp_nhs.c
        nhrpd/nhrp_packet.c
        nhrpd/nhrp_peer.c
        nhrpd/nhrp_protocol.h
        nhrpd/nhrp_route.c
        nhrpd/nhrp_shortcut.c
        nhrpd/nhrp_vc.c
        nhrpd/nhrp_vty.c
        nhrpd/nhrpd.h
        nhrpd/os.h
        nhrpd/reqid.c
        nhrpd/resolver.c
        nhrpd/vici.c
        nhrpd/vici.h
        nhrpd/zbuf.c
        nhrpd/zbuf.h
        nhrpd/znl.c
        nhrpd/znl.h
        ospf6d/ospf6_abr.c
        ospf6d/ospf6_abr.h
        ospf6d/ospf6_area.c
        ospf6d/ospf6_area.h
        ospf6d/ospf6_asbr.c
        ospf6d/ospf6_asbr.h
        ospf6d/ospf6_flood.c
        ospf6d/ospf6_flood.h
        ospf6d/ospf6_interface.c
        ospf6d/ospf6_interface.h
        ospf6d/ospf6_intra.c
        ospf6d/ospf6_intra.h
        ospf6d/ospf6_lsa.c
        ospf6d/ospf6_lsa.h
        ospf6d/ospf6_lsdb.c
        ospf6d/ospf6_lsdb.h
        ospf6d/ospf6_main.c
        ospf6d/ospf6_message.c
        ospf6d/ospf6_message.h
        ospf6d/ospf6_neighbor.c
        ospf6d/ospf6_neighbor.h
        ospf6d/ospf6_network.c
        ospf6d/ospf6_network.h
        ospf6d/ospf6_proto.c
        ospf6d/ospf6_proto.h
        ospf6d/ospf6_route.c
        ospf6d/ospf6_route.h
        ospf6d/ospf6_snmp.c
        ospf6d/ospf6_snmp.h
        ospf6d/ospf6_spf.c
        ospf6d/ospf6_spf.h
        ospf6d/ospf6_top.c
        ospf6d/ospf6_top.h
        ospf6d/ospf6_zebra.c
        ospf6d/ospf6_zebra.h
        ospf6d/ospf6d.c
        ospf6d/ospf6d.h
        ospfclient/ospf_apiclient.c
        ospfclient/ospf_apiclient.h
        ospfclient/ospfclient.c
        ospfd/ospf_abr.c
        ospfd/ospf_abr.h
        ospfd/ospf_api.c
        ospfd/ospf_api.h
        ospfd/ospf_apiserver.c
        ospfd/ospf_apiserver.h
        ospfd/ospf_asbr.c
        ospfd/ospf_asbr.h
        ospfd/ospf_ase.c
        ospfd/ospf_ase.h
        ospfd/ospf_dump.c
        ospfd/ospf_dump.h
        ospfd/ospf_flood.c
        ospfd/ospf_flood.h
        ospfd/ospf_ia.c
        ospfd/ospf_ia.h
        ospfd/ospf_interface.c
        ospfd/ospf_interface.h
        ospfd/ospf_ism.c
        ospfd/ospf_ism.h
        ospfd/ospf_lsa.c
        ospfd/ospf_lsa.h
        ospfd/ospf_lsdb.c
        ospfd/ospf_lsdb.h
        ospfd/ospf_main.c
        ospfd/ospf_neighbor.c
        ospfd/ospf_neighbor.h
        ospfd/ospf_network.c
        ospfd/ospf_network.h
        ospfd/ospf_nsm.c
        ospfd/ospf_nsm.h
        ospfd/ospf_opaque.c
        ospfd/ospf_opaque.h
        ospfd/ospf_packet.c
        ospfd/ospf_packet.h
        ospfd/ospf_ri.c
        ospfd/ospf_ri.h
        ospfd/ospf_route.c
        ospfd/ospf_route.h
        ospfd/ospf_routemap.c
        ospfd/ospf_snmp.c
        ospfd/ospf_snmp.h
        ospfd/ospf_spf.c
        ospfd/ospf_spf.h
        ospfd/ospf_te.c
        ospfd/ospf_te.h
        ospfd/ospf_vty.c
        ospfd/ospf_vty.h
        ospfd/ospf_zebra.c
        ospfd/ospf_zebra.h
        ospfd/ospfd.c
        ospfd/ospfd.h
        pimd/pim_assert.c
        pimd/pim_assert.h
        pimd/pim_cmd.c
        pimd/pim_cmd.h
        pimd/pim_hello.c
        pimd/pim_hello.h
        pimd/pim_iface.c
        pimd/pim_iface.h
        pimd/pim_ifchannel.c
        pimd/pim_ifchannel.h
        pimd/pim_igmp.c
        pimd/pim_igmp.h
        pimd/pim_igmp_join.c
        pimd/pim_igmp_join.h
        pimd/pim_igmpv3.c
        pimd/pim_igmpv3.h
        pimd/pim_int.c
        pimd/pim_int.h
        pimd/pim_join.c
        pimd/pim_join.h
        pimd/pim_macro.c
        pimd/pim_macro.h
        pimd/pim_main.c
        pimd/pim_mroute.c
        pimd/pim_mroute.h
        pimd/pim_msg.c
        pimd/pim_msg.h
        pimd/pim_neighbor.c
        pimd/pim_neighbor.h
        pimd/pim_oil.c
        pimd/pim_oil.h
        pimd/pim_pim.c
        pimd/pim_pim.h
        pimd/pim_routemap.c
        pimd/pim_rpf.c
        pimd/pim_rpf.h
        pimd/pim_signals.c
        pimd/pim_signals.h
        pimd/pim_sock.c
        pimd/pim_sock.h
        pimd/pim_ssmpingd.c
        pimd/pim_ssmpingd.h
        pimd/pim_static.c
        pimd/pim_static.h
        pimd/pim_str.c
        pimd/pim_str.h
        pimd/pim_time.c
        pimd/pim_time.h
        pimd/pim_tlv.c
        pimd/pim_tlv.h
        pimd/pim_upstream.c
        pimd/pim_upstream.h
        pimd/pim_util.c
        pimd/pim_util.h
        pimd/pim_version.c
        pimd/pim_version.h
        pimd/pim_vty.c
        pimd/pim_vty.h
        pimd/pim_zebra.c
        pimd/pim_zebra.h
        pimd/pim_zlookup.c
        pimd/pim_zlookup.h
        pimd/pimd.c
        pimd/pimd.h
        pimd/test_igmpv3_join.c
        qpb/linear_allocator.h
        qpb/qpb.c
        qpb/qpb.h
        qpb/qpb_allocator.c
        qpb/qpb_allocator.h
        ripd/rip_debug.c
        ripd/rip_debug.h
        ripd/rip_interface.c
        ripd/rip_interface.h
        ripd/rip_main.c
        ripd/rip_offset.c
        ripd/rip_peer.c
        ripd/rip_routemap.c
        ripd/rip_snmp.c
        ripd/rip_zebra.c
        ripd/ripd.c
        ripd/ripd.h
        ripngd/ripng_debug.c
        ripngd/ripng_debug.h
        ripngd/ripng_interface.c
        ripngd/ripng_main.c
        ripngd/ripng_nexthop.c
        ripngd/ripng_nexthop.h
        ripngd/ripng_offset.c
        ripngd/ripng_peer.c
        ripngd/ripng_route.c
        ripngd/ripng_route.h
        ripngd/ripng_routemap.c
        ripngd/ripng_zebra.c
        ripngd/ripngd.c
        ripngd/ripngd.h
        tests/aspath_test.c
        tests/bgp_capability_test.c
        tests/bgp_mp_attr_test.c
        tests/bgp_mpath_test.c
        tests/common-cli.c
        tests/common-cli.h
        tests/ecommunity_test.c
        tests/heavy-thread.c
        tests/heavy-wq.c
        tests/heavy.c
        tests/main.c
        tests/prng.c
        tests/prng.h
        tests/table_test.c
        tests/test-buffer.c
        tests/test-checksum.c
        tests/test-cli.c
        tests/test-commands.c
        tests/test-memory.c
        tests/test-nexthop-iter.c
        tests/test-privs.c
        tests/test-segv.c
        tests/test-sig.c
        tests/test-stream.c
        tests/test-timer-correctness.c
        tests/test-timer-performance.c
        tests/tests.h
        vtysh/vtysh.c
        vtysh/vtysh.h
        vtysh/vtysh_config.c
        vtysh/vtysh_main.c
        vtysh/vtysh_user.c
        vtysh/vtysh_user.h
        watchquagga/watchquagga.c
        zebra/client_main.c
        zebra/connected.c
        zebra/connected.h
        zebra/debug.c
        zebra/debug.h
        zebra/if_ioctl.c
        zebra/if_ioctl_solaris.c
        zebra/if_netlink.c
        zebra/if_sysctl.c
        zebra/interface.c
        zebra/interface.h
        zebra/ioctl.c
        zebra/ioctl.h
        zebra/ioctl_null.c
        zebra/ioctl_solaris.c
        zebra/ioctl_solaris.h
        zebra/ipforward.h
        zebra/ipforward_proc.c
        zebra/ipforward_solaris.c
        zebra/ipforward_sysctl.c
        zebra/irdp.h
        zebra/irdp_interface.c
        zebra/irdp_main.c
        zebra/irdp_packet.c
        zebra/kernel_netlink.c
        zebra/kernel_null.c
        zebra/kernel_socket.c
        zebra/kernel_socket.h
        zebra/main.c
        zebra/misc_null.c
        zebra/redistribute.c
        zebra/redistribute.h
        zebra/redistribute_null.c
        zebra/rib.h
        zebra/router-id.c
        zebra/router-id.h
        zebra/rt.h
        zebra/rt_netlink.c
        zebra/rt_netlink.h
        zebra/rt_socket.c
        zebra/rtadv.c
        zebra/rtadv.h
        zebra/rtread_getmsg.c
        zebra/rtread_netlink.c
        zebra/rtread_sysctl.c
        zebra/test_main.c
        zebra/zebra_fpm.c
        zebra/zebra_fpm.h
        zebra/zebra_fpm_dt.c
        zebra/zebra_fpm_netlink.c
        zebra/zebra_fpm_private.h
        zebra/zebra_fpm_protobuf.c
        zebra/zebra_rib.c
        zebra/zebra_rnh.c
        zebra/zebra_rnh.h
        zebra/zebra_rnh_null.c
        zebra/zebra_routemap.c
        zebra/zebra_snmp.c
        zebra/zebra_vty.c
        zebra/zserv.c
        zebra/zserv.h)

add_executable(quagga ${SOURCE_FILES})